--- a/less/faculties/faelles.less
+++ b/less/faculties/faelles.less
@@ -9,7 +9,7 @@
     color: @white-color;
 
     .header {
-      background: fade(@ku-red, 83%);
+      background: fade(@ku-red, 93%);
       color: @white-color;
     }
 
@@ -304,7 +304,10 @@
       background: @ku-red;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@ku-red, 83%);
+        background: fade(@ku-red, 93%);
+      }
+      &.full-bg {
+        background: @ku-red;
       }
     }
 
@@ -312,7 +315,10 @@
       background: @blue;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@blue, 83%);
+        background: fade(@blue, 93%);
+      }
+      &.full-bg {
+        background: @blue;
       }
     }
 
@@ -320,7 +326,10 @@
       background: @green;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@green, 83%);
+        background: fade(@green, 93%);
+      }
+      &.full-bg {
+        background: @green;
       }
     }
 
@@ -328,7 +337,10 @@
       background: @ku-darkgray;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@ku-darkgray, 83%);
+        background: fade(@ku-darkgray, 93%);
+      }
+      &.full-bg {
+        background: @ku-darkgray;
       }
     }
 
@@ -336,7 +348,10 @@
       background: @ku-darkblue;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@ku-darkblue, 83%);
+        background: fade(@ku-darkblue, 93%);
+      }
+      &.full-bg {
+        background: @ku-darkblue;
       }
     }
   }
