--- a/less/faculties/jur.less
+++ b/less/faculties/jur.less
@@ -308,7 +308,10 @@
       background: @jura;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@jura, 83%);
+        background: fade(@jura, 93%);
+      }
+      &.full-bg {
+        background: @jura;
       }
     }
 
@@ -316,7 +319,10 @@
       background: @jura-sub_1;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@jura-sub_1, 83%);
+        background: fade(@jura-sub_1, 93%);
+      }
+      &.full-bg {
+        background: @jura-sub_1;
       }
     }
 
@@ -324,7 +330,10 @@
       background: @jura-sub_2;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@jura-sub_2, 83%);
+        background: fade(@jura-sub_2, 93%);
+      }
+      &.full-bg {
+        background: @jura-sub_2;
       }
     }
 
@@ -332,7 +341,10 @@
       background: @jura-sub_3;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@jura-sub_3, 83%);
+        background: fade(@jura-sub_3, 93%);
+      }
+      &.full-bg {
+        background: @jura-sub_3;
       }
     }
 
@@ -340,7 +352,10 @@
       background: @jura-sub_4;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@jura-sub_4, 83%);
+        background: fade(@jura-sub_4, 93%);
+      }
+      &.full-bg {
+        background: @jura-sub_4;
       }
     }
   }
