--- a/less/faculties/science.less
+++ b/less/faculties/science.less
@@ -305,7 +305,10 @@
       background: @science;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@science, 83%);
+        background: fade(@science, 93%);
+      }
+      &.full-bg {
+        background: @science;
       }
     }
 
@@ -313,7 +316,10 @@
       background: @science-sub_1;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@science-sub_1, 83%);
+        background: fade(@science-sub_1, 93%);
+      }
+      &.full-bg {
+        background: @science-sub_1;
       }
     }
 
@@ -321,7 +327,10 @@
       background: @science-sub_2;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@science-sub_2, 83%);
+        background: fade(@science-sub_2, 93%);
+      }
+      &.full-bg {
+        background: @science-sub_2;
       }
     }
 
@@ -329,7 +338,10 @@
       background: @science-sub_3;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@science-sub_3, 83%);
+        background: fade(@science-sub_3, 93%);
+      }
+      &.full-bg {
+        background: @science-sub_3;
       }
     }
 
@@ -337,7 +349,10 @@
       background: @science-sub_4;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@hum-sub_4, 83%);
+        background: fade(@hum-sub_4, 93%);
+      }
+      &.full-bg {
+        background: @science-sub_4;
       }
     }
   }
