--- a/less/faculties/sund.less
+++ b/less/faculties/sund.less
@@ -303,7 +303,10 @@
       background: @sund;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@sund, 83%);
+        background: fade(@sund, 93%);
+      }
+      &.full-bg {
+        background: @sund;
       }
     }
 
@@ -311,7 +314,10 @@
       background: @sund-sub_1;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@sund-sub_1, 83%);
+        background: fade(@sund-sub_1, 93%);
+      }
+      &.full-bg {
+        background: @sund-sub_1;
       }
     }
 
@@ -319,7 +325,10 @@
       background: @sund-sub_2;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@sund-sub_2, 83%);
+        background: fade(@sund-sub_2, 93%);
+      }
+      &.full-bg {
+        background: @sund-sub_2;
       }
     }
 
@@ -327,7 +336,10 @@
       background: @sund-sub_3;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@sund-sub_3, 83%);
+        background: fade(@sund-sub_3, 93%);
+      }
+      &.full-bg {
+        background: @sund-sub_3;
       }
     }
 
@@ -335,7 +347,10 @@
       background: @sund-sub_4;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@sund-sub_4, 83%);
+        background: fade(@sund-sub_4, 93%);
+      }
+      &.full-bg {
+        background: @sund-sub_4;
       }
     }
   }
