--- a/less/faculties/samf.less
+++ b/less/faculties/samf.less
@@ -9,7 +9,7 @@
     color: @white-color;
 
     .header {
-      background: fade(@samf, 83%);
+      background: fade(@samf, 93%);
       color: @white-color;
     }
 
@@ -305,7 +305,10 @@
       background: @samf;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@samf, 83%);
+        background: fade(@samf, 93%);
+      }
+      &.full-bg {
+        background: @samf;
       }
     }
 
@@ -313,7 +316,10 @@
       background: @samf-sub_1;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@samf-sub_1, 83%);
+        background: fade(@samf-sub_1, 93%);
+      }
+      &.full-bg {
+        background: @samf-sub_1;
       }
     }
 
@@ -321,7 +327,10 @@
       background: @samf-sub_2;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@samf-sub_2, 83%);
+        background: fade(@samf-sub_2, 93%);
+      }
+      &.full-bg {
+        background: @samf-sub_2;
       }
     }
 
@@ -329,7 +338,10 @@
       background: @samf-sub_3;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@samf-sub_3, 83%);
+        background: fade(@samf-sub_3, 93%);
+      }
+      &.full-bg {
+        background: @samf-sub_3;
       }
     }
 
@@ -337,7 +349,10 @@
       background: @samf-sub_4;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@samf-sub_4, 83%);
+        background: fade(@samf-sub_4, 93%);
+      }
+      &.full-bg {
+        background: @samf-sub_4;
       }
     }
   }
