--- a/less/faculties/teo.less
+++ b/less/faculties/teo.less
@@ -287,7 +287,7 @@
 
           &.subcolor_4 {
             .header {
-              background: fade(@teol-sub_4, 83%);
+              background: fade(@teol-sub_4, 93%);
               color: @white-color;
             }
           }
@@ -303,7 +303,10 @@
       background: @teol;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@teol, 83%);
+        background: fade(@teol, 93%);
+      }
+      &.full-bg {
+        background: @teol;
       }
     }
 
@@ -311,7 +314,10 @@
       background: @teol-sub_1;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@teol-sub_1, 83%);
+        background: fade(@teol-sub_1, 93%);
+      }
+      &.full-bg {
+        background: @teol-sub_1;
       }
     }
 
@@ -319,7 +325,10 @@
       background: @teol-sub_2;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@teol-sub_2, 83%);
+        background: fade(@teol-sub_2, 93%);
+      }
+      &.full-bg {
+        background: @teol-sub_2;
       }
     }
 
@@ -327,7 +336,10 @@
       background: @teol-sub_3;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@teol-sub_3, 83%);
+        background: fade(@teol-sub_3, 93%);
+      }
+      &.full-bg {
+        background: @teol-sub_3;
       }
     }
 
@@ -335,7 +347,10 @@
       background: @teol-sub_4;
       color: @white-color;
       @media (min-width: @screen-sm) {
-        background: fade(@teol-sub_4, 83%);
+        background: fade(@teol-sub_4, 93%);
+      }
+      &.full-bg {
+        background: @teol-sub_4;
       }
     }
   }
