--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -386,7 +386,7 @@
       &.full-bg {
         position: absolute;
         top: 0;
-        padding: 25px;
+        padding: 15px;
         width: 100%;
       }
     }
@@ -439,6 +439,9 @@
           width: 50%;
           min-height: 70%;
           .border-left-radius(2px);
+        }
+        &.full-bg {
+          padding: 30px 45px;
         }
       }
     }
