--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,4 +1,5 @@
 /* Slider */
+
 .gallery-nav,
 .slide-gallery,
 .slideshow {
@@ -332,7 +333,7 @@
       bottom: 0;
       width: 100%;
       font-size: 16px;
-      letter-spacing: .7px;
+      letter-spacing: 0.7px;
       line-height: @line-height-small;
       padding: 12px 15px 10px 20px;
       font-size: 14px;
@@ -357,6 +358,7 @@
         @media (min-width: @screen-sm) {
           background: fade(@ku-gray, 90%);
         }
+
         &.full-bg {
           background: @ku-gray;
         }
@@ -368,6 +370,7 @@
         @media (min-width: @screen-sm) {
           background: fade(@white-color, 90%);
         }
+
         &.full-bg {
           background: @gray-f5;
         }
@@ -379,10 +382,12 @@
         @media (min-width: @screen-sm) {
           background: fade(@brown, 83%);
         }
+
         &.full-bg {
           background: @brown;
         }
       }
+
       &.full-bg {
         position: absolute;
         top: 0;
@@ -393,6 +398,17 @@
 
     &:hover .caption {
       text-decoration: none;
+    }
+  }
+  @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
+    .caption {
+      // Special caption width for iPad
+      &.textblock-left,
+      &.textblock-right,
+      &.textlabel-left,
+      &.textlabel-right {
+        width: 50%;
+      }
     }
   }
   @media (min-width: @screen-sm) {
@@ -440,17 +456,10 @@
           min-height: 70%;
           .border-left-radius(2px);
         }
+
         &.full-bg {
           padding: 30px 45px;
         }
-      }
-    }
-  }
-  @media (min-width: @screen-sm) and (max-width: @screen-sm-max) {
-    .caption {
-      // Special caption width for iPad
-      &.textblock-left, &.textblock-right, &.textlabel-left, &.textlabel-right {
-        width: 50%;
       }
     }
   }
