--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -248,10 +248,13 @@
       }
     }
   }
-
   // Hide sub level buttons in news
-
   ul.nyheder {
+    img {
+      width: 55px;
+      height: 55px;
+    }
+
     .mm-btn_next {
       display: none;
     }
