--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -248,8 +248,14 @@
       }
     }
   }
-  // Hide sub level buttons in news
+
   ul.nyheder {
+    li {
+      & > a {
+        padding: 10px 12px;
+      }
+    }
+
     img {
       width: 55px;
       height: 55px;
