--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -396,7 +396,6 @@
   }
   // Height 298px
   &.size1 {
-    //height: @gridbox1;
     background: @ku-gray;
 
     &.with-img {
@@ -441,7 +440,7 @@
     .box2 {
       order: 1;
       // image height
-      flex: 0 0 @gridbox3;
+      flex: 0 0 50%;
     }
 
     &:before {
