--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -42,7 +42,7 @@ nav {
       margin-top: @grid-gutter-height;
     }
   }
-  @media (max-width: @screen-sm-max) {
+  @media (max-width: @screen-xs-max) {
     [class*="col-"] {
       + [class*="col-"] {
         margin-top: @grid-gutter-height;
