--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -535,9 +535,9 @@
   }
 
   .gridbox {
-    .text {
-      display: none;
-    }
+    // .text {
+    //   display: none;
+    // }
 
     &.size1 {
       .text {
