--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -43,11 +43,9 @@ nav {
     }
   }
   @media (max-width: @screen-xs-max) {
-    [class^="col-"] {
-        + [class$="-12"] {
-          // Match col and 12
-        margin-top: @grid-gutter-height;
-      }
+    [class^="col-"][class$="-12"] {
+      // Match col and 12
+      margin-top: @grid-gutter-height;
     }
   }
   // ol,
