--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -42,10 +42,9 @@ nav {
       margin-top: @grid-gutter-height;
     }
   }
-  @media (max-width: @screen-xs-max) {
-    [class^="col-"][class$="-12"] {
-      + [class^="col-"][class$="-12"] {
-        // Match col and 12
+  @media (max-width: @screen-sm-max) {
+    [class*="col-"] {
+      + [class*="col-"] {
         margin-top: @grid-gutter-height;
       }
     }
