--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -350,7 +350,7 @@ nav {
   width: 25px;
   animation: ku-loading 0.6s infinite linear;
   overflow: auto;
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
 }
