--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -36,7 +36,7 @@
   position: relative;
   background: @gray-light;
   @media (min-width: @screen-sm-min) {
-    background: linear-gradient(to bottom, rgba(119, 119, 119, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
+    background: linear-gradient(to bottom, rgba(@gray-light, 1) 0%, rgba(134, 134, 134, 1) 25%, rgba(142, 141, 141, 1) 50%, rgba(136, 136, 136, 1) 80%, rgba(128, 128, 128, 1) 100%);
   }
   color: @white-color;
   flex: none;
