--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -130,6 +130,8 @@ div.rendering p.type, ol.portal_list>li {
   height: auto;
   width: 100%;
   float: left;
+  clear: both;
+  margin: 20px 0;
 }
 
 .view_container ul.tabs li a {
@@ -162,6 +164,12 @@ div.rendering p.type, ol.portal_list>li {
   width: 100%;
 }
 
+.export_cv {
+  float: left;
+  clear: both;
+  width: 100%;
+}
+
 table.properties>tbody>tr:hover {
   background-color: #f5f5f5;
 }
@@ -181,8 +189,8 @@ table.properties>tbody>tr:hover {
 }
 
 .person_text h2.title {
-  font-size: 16px!important;
-  font-weight: 600!important;
+  font-size: 16px !important;
+  font-weight: 600 !important;
 }
 
 .rendering h2 {
@@ -190,13 +198,19 @@ table.properties>tbody>tr:hover {
 }
 
 .striped-list h2.title {
-  font-size: 14px!important;
-  font-weight: 600!important;
+  font-size: 14px !important;
+  font-weight: 600 !important;
 }
+
 .view_title .title {
-  font-size: 18px!important;
+  font-size: 18px !important;
 }
+
 .view_title .type {
-  font-size: 16px!important;
-  font-weight: 600!important;
+  font-size: 16px !important;
+  font-weight: 600 !important;
+}
+
+.portal-dropdown .dropdown-menu li {
+  width: 100%;
 }
