--- a/less/buttons.less
+++ b/less/buttons.less
@@ -52,7 +52,7 @@
   a & {
     &.disabled,
     fieldset[disabled] & {
-      pointer-events: none; // Future-proof disabling of clicks on `<a>` elements
+      pointer-events: none;
     }
   }
   // KU specific
