--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -5,13 +5,13 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: @zindex-tooltip!important;
+    z-index: 1020!important;
     padding: @padding20;
     color: @white-color;
-    background: fade(lighten(@gray-light, 18%), 70%);
+    background: fade(lighten(@gray-light, 18%), 90%);
 
     .h2 {
-      font-weight: 700;
+      font-weight: 600;
       margin-top: 0;
     }
 
