--- a/less/variables.less
+++ b/less/variables.less
@@ -579,7 +579,7 @@
 @nav-link-hover-bg:                         @gray-lighter;
 @nav-link-border-radius:                   @border-radius-base;
 
-@nav-disabled-link-color:                   @gray-999;
+@nav-disabled-link-color:                   @gray-light;
 @nav-disabled-link-hover-color:             @gray-light;
 
 //== Tabs
@@ -597,7 +597,7 @@
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
 @nav-pills-bg-color:                        #f3f3f3;
-@nav-pills-active-link-hover-bg:            @gray-999;
+@nav-pills-active-link-hover-bg:            @gray-light;
 @nav-pills-active-link-hover-color:         @component-active-color;
 
 @ku-nav-tabs-and-pills-hover-bg-color:      #e7e7e7;
@@ -628,8 +628,8 @@
 @pagination-hover-border:              @gray-ddd;
 
 @pagination-active-color:              @white-color;
-@pagination-active-bg:                 @gray-999;
-@pagination-active-border:             @gray-999;
+@pagination-active-bg:                 @gray-light;
+@pagination-active-border:             @gray-light;
 
 @pagination-disabled-color:            @gray-light;
 @pagination-disabled-bg:               @white-color;
