--- a/docs/assets/css/doctypes/gridforside.css
+++ b/docs/assets/css/doctypes/gridforside.css
@@ -10,6 +10,12 @@
   display: none;
 }
 
+.main-content .figure:first-child,
+.main-content figure:first-child {
+  /* Remove top margin for first image */
+  margin-top: 0;
+}
+
 .h1,
 h1 {
   margin-top: 20px;
