--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -188,7 +188,7 @@ table.properties>tbody>tr:hover {
   padding: 5px;
 }
 
-.person_text h2.title {
+#purecontent .person_text h2.title {
   font-size: 16px !important;
   font-weight: 600 !important;
   color: #252525!important;
