--- a/less/type.less
+++ b/less/type.less
@@ -104,6 +104,10 @@ h6 {
 
 p {
   margin: 10px 0;
+
+  &:empty {
+    display: none;
+  }
 }
 // .lead {
 //   margin-bottom: @line-height-computed;
