--- a/less/ku-misc.less
+++ b/less/ku-misc.less
@@ -113,6 +113,12 @@ nav {
   }
 }
 
+.rightbox-calendar-widget {
+  + .rightbox-normal {
+    margin-top: @grid-gutter-height;
+  }
+}
+
 .right-side {
   .pull-right;
   @media (min-width: @screen-sm) {
