--- a/less/panels.less
+++ b/less/panels.less
@@ -12,6 +12,11 @@
   & + .panel {
     margin-top: @grid-gutter-height;
   }
+  & > ul {
+    &:first-child {
+      margin-top: 10px;
+    }
+  }
 }
 // Panel contents
 
