--- a/less/ku-datetimepicker.less
+++ b/less/ku-datetimepicker.less
@@ -363,11 +363,11 @@
 
   span {
     border-radius: 50%;
-    line-height: 28px;
+    line-height: 26px;
     display: block;
-    width: 28px;
-    height: 28px;
-    margin: 0 auto;
+    width: 26px;
+    height: 26px;
+    margin: 2px auto;
 
     a {
       color: @text-color;
