--- a/docs/_includes/ku-branding.html
+++ b/docs/_includes/ku-branding.html
@@ -6,8 +6,10 @@
       </a>
     </div>
     <div class="ku-branding-text">
-      <div class="ku-branding-text-major">{{ page.title }}</div>
-      <div class="ku-branding-text-sub"></div>
+      <a href="/" title="{{ page.title }}">
+        <div class="ku-branding-text-major">{{ page.title }}</div>
+        <div class="ku-branding-text-sub"></div>
+      </a>
     </div>
   </div>
 </div>
