--- a/less/panels.less
+++ b/less/panels.less
@@ -25,9 +25,10 @@
     }
   }
 
-  ul {
+  ul:not(.list-group) {
     li {
-      padding: 3px 0;
+      padding-top: 3px;
+      padding-bottom: 3px;
     }
   }
 }
