--- a/docs/_includes/css/responsive-utilities.html
+++ b/docs/_includes/css/responsive-utilities.html
@@ -160,10 +160,10 @@
   {% highlight html %}
 <div class="visible-xs-block hidden-sm hidden-md hidden-lg">Mobile</div>
 <div class="visible-xs-block visible-sm-block hidden-md hidden-lg">Mobile and tablet</div>
-<div class="visible-xs-block hidden-sm hidden-md visible-lg-block">Mobile and desktop</div>
+<div class="visible-xs-block hidden-sm visible-md-block visible-lg-block">Mobile and desktop</div>
 <div class="hidden-xs visible-sm-block hidden-md hidden-lg">Tablet</div>
-<div class="hidden-xs hidden-sm visible-md-block visible-lg-block">Tablet and desktop</div>
-<div class="hidden-xs hidden-sm hidden-md visible-lg-block">Desktop</div>
+<div class="hidden-xs visible-sm-block visible-md-block visible-lg-block">Tablet and desktop</div>
+<div class="hidden-xs hidden-sm visible-md-block visible-lg-block">Desktop</div>
   {% endhighlight %}
 
   <p>Green checkmarks indicate the element <strong>is visible</strong> in your current viewport.</p>
