--- a/docs/_includes/components/glyphicons.html
+++ b/docs/_includes/components/glyphicons.html
@@ -54,6 +54,8 @@
       <button type="button" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</button>
       <button type="button" class="btn btn-default btn-xs"><span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star</button>
     </div>
+    <h4 class="clearfix">Button with icon as css</h4>
+    <button type="button" class="btn btn-default"><span class="icon icon-desktop" aria-hidden="true"></span></button>
   </div> {% highlight html %} <button type="button" class="btn btn-default" aria-label="Left Align">
     <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
   </button>
@@ -226,7 +228,7 @@
     <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.linkedin.com/shareArticle?mini=true&amp;url=" href="#">Share on LinkedIn</a></li>
     <li><a onclick="shareURL($(this).data('share'))" data-share="https://twitter.com/home?status=" href="#">Share on Twitter</a></li>
   </ul>
-   
+
   {% highlight html %} <ul>
     <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.facebook.com/sharer/sharer.php?u=" href="#">Share on Facebook</a></li>
     <li><a onclick="shareURL($(this).data('share'))" data-share="https://www.linkedin.com/shareArticle?mini=true&amp;url=" href="#">Share on LinkedIn</a></li>
