--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -93,6 +93,15 @@
     margin-bottom: 5px;
   }
 }
+.rightbox:not(#gridsidebar) {
+  .calendarbox {
+    .media {
+      &:first-child {
+        border-top: 0;
+      }
+    }
+  }
+}
 // Arrangementer - højre kolonne
 
 #minicalendar {
