--- a/less/variables.less
+++ b/less/variables.less
@@ -187,6 +187,10 @@
 @font-size-h5:            floor((@font-size-base * 1.1)); // ~13px
 @font-size-h6:            @font-size-base;
 
+// KU specific:
+@font-size-body:          14px;
+@font-size-body-desktop:  13px;
+
 //** Unit-less `line-height` for use in components like buttons.
 @line-height-base:        1.5; // 18/12
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
