--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -35,7 +35,7 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: @font-family-base;
-  font-size: 13px;
+  font-size: @font-size-body-desktop;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
@@ -49,7 +49,7 @@ body {
   position: relative;
   @media (max-width: @screen-xs-max) {
     -webkit-overflow-scrolling: touch;
-    font-size: @font-size-large;
+    font-size: @font-size-body;
   }
 }
 
