--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -133,7 +133,7 @@
 // Search news forms
 
 .search-news {
-  padding: 5px 15px!important !important;
+  padding: 5px 15px!important;
 
   form {
     display: flex;
