--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -10,7 +10,7 @@
 // Remember: Custom font icons are stored in the cms.
 @font-face {
   font-family: @custom-icon-font-family-name;
-  font-display: auto;
+  font-display: swap;
   src: url("@{custom-icon-font-path}@{custom-icon-font-name}.eot");
   src: url("@{custom-icon-font-path}@{custom-icon-font-name}.eot?#iefix") format('embedded-opentype'), url("@{custom-icon-font-path}@{custom-icon-font-name}.woff2") format('woff2'), url("@{custom-icon-font-path}@{custom-icon-font-name}.woff") format('woff'), url("@{custom-icon-font-path}@{custom-icon-font-name}.ttf") format('truetype'), url("@{custom-icon-font-path}@{custom-icon-font-name}.svg#@{custom-icon-font-svg-id}") format('svg');
 }
@@ -18,7 +18,7 @@
 // <a href="#"><span class="glyphicon glyphicon-star"></span> Star</a>
 @font-face {
   font-family: 'Glyphicons Halflings';
-  font-display: auto;
+  font-display: swap;
   src: url("@{icon-font-path}@{icon-font-name}.eot");
   src: url("@{icon-font-path}@{icon-font-name}.eot?#iefix") format('embedded-opentype'), url("@{icon-font-path}@{icon-font-name}.woff2") format('woff2'), url("@{icon-font-path}@{icon-font-name}.woff") format('woff'), url("@{icon-font-path}@{icon-font-name}.ttf") format('truetype'), url("@{icon-font-path}@{icon-font-name}.svg#@{icon-font-svg-id}") format('svg');
 }
