--- a/less/ku-leftmenu.less
+++ b/less/ku-leftmenu.less
@@ -448,7 +448,7 @@
 
   .leftmenu-toggle {
     position: fixed;
-    top: 0;
+    top: 5px;
     right: 0;
     z-index: 1040;
     margin-right: 10px;
