--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -121,10 +121,10 @@
   <!-- Kurser.ku.dk -->
   <script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script>
   {% endif %}
-  {% if page.slug == "examples" %}
+  <!-- {% if page.slug == "examples" %}
   <script src="{{ site.baseurl }}/assets/js/mmenu/jquery.mmenu.all.min.js"></script>
   <script src="{{ site.baseurl }}/custom/ku-mobile-menu.js"></script>
-  {% endif %}
+  {% endif %} -->
 <script async defer src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
 <script>
   // Only use under development - set active left menu item
