--- a/less/glyphicons.less
+++ b/less/glyphicons.less
@@ -1657,7 +1657,8 @@
 // Social icons to use anywhere
 
 .social-icons {
-  .list-inline;
+    display: inline-block;
+    padding-left: 5px!important;
 
   .icon {
     width: 31px;
