--- a/less/type.less
+++ b/less/type.less
@@ -103,7 +103,7 @@ h6 {
 // -------------------------
 
 p {
-  margin: 10px 0;
+  margin: 0 0 20px 0;
 
   &:empty {
     //Hide empty p-tags comming from the editor
