--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -22,11 +22,11 @@
     }
   }
 
-  a {
-    &:not(.btn):visited {
-      color: @link-visited-color;
-    }
-  }
+  // a {
+  //   &:not(.btn):visited {
+  //     color: @link-visited-color;
+  //   }
+  // }
 }
 //
 // Global footer
