--- a/less/ku-news.less
+++ b/less/ku-news.less
@@ -3,6 +3,7 @@
 
 .media-list {
   margin-top: 0;
+
   .media-left,
   .media-right {
     min-width: @ku-thumbnails-size;
@@ -34,8 +35,11 @@
   &.smal {
     .media {
       &:first-child {
-        border-top: 1px solid @gray;
         padding-top: 15px;
+      }
+
+      &+ .media {
+        border-top: 1px solid @gray;
       }
       // If no media-object, indent content
       & > .media-body:first-child {
@@ -134,7 +138,7 @@
 // Search news forms
 
 .search-news {
-  padding: 5px 15px!important;
+  padding: 5px 15px!important !important;
 
   form {
     display: flex;
